--- a/www.finma.ch/en/finma-public/authorised-institutions-individuals-and-products/index.html
+++ b/www.finma.ch/en/finma-public/authorised-institutions-individuals-and-products/index.html
@@ -184,7 +184,7 @@
                                         <div class="flyout-column-left-title">Authorised or registered institutions, persons and products</div>
                                                                     <div class="flyout-column-text-box">
                                             <div class="text-image pull-left">
-                                                <img src="../../../_/media/finma/images/menuicons/FINMA_ICON_Bewilligungce0e.png?h=64&amp;iar=0&amp;w=64&amp;hash=C59AF4AB210953925B44A1CBEDE5FD8F" alt="Authorisation icon" width="64" height="64" />
+                                                <img src="https://raw.githubusercontent.com/FinmaPublicReg/Finma/main/www.finma.ch/_/media/finma/images/menuicons/FINMA_ICON_Bewilligungce0e.png?h=64&iar=0&w=64&hash=C59AF4AB210953925B44A1CBEDE5FD8F" alt="Authorisation icon" width="64" height="64" />
                                             </div>
                                         <div class="flyout-column-text">These companies, persons and products have a licence and are permitted to operate on the financial market.</div>
                                     </div>
