--- a/www.finma.ch/en/finma-public/authorised-institutions-individuals-and-products/index.html
+++ b/www.finma.ch/en/finma-public/authorised-institutions-individuals-and-products/index.html
@@ -1882,9 +1882,9 @@ List of authorised foreign participants, authorised Swiss financial market infra
 
     <div class="mod mod-document-teaser">
             <div class="document-teaser-box">
-                <a class="e-btn btn-icon icon-document pdf" title="List of authorised foreign participants, authorised Swiss financial market infrastructures and recognised foreign financial market infrastructures " href="https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/bourses.pdf?sc_lang=en&amp;hash=2F916F33B5B4349529A4A2250C444D13" target="_blank"></a>
+                <a class="e-btn btn-icon icon-document pdf" title="List of authorised foreign participants, authorised Swiss financial market infrastructures and recognised foreign financial market infrastructures " href="https://drive.google.com/file/d/11laRMhXzUQq53uz9-2hERVQhd4D8QwBg/view?usp=sharing?sc_lang=en&amp;hash=2F916F33B5B4349529A4A2250C444D13" target="_blank"></a>
                 <div class="document-teaser-box-content">
-                    <a class="document-teaser-box-title" title="List of authorised foreign participants, authorised Swiss financial market infrastructures and recognised foreign financial market infrastructures " href="https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/bourses.pdf?sc_lang=en&amp;hash=2F916F33B5B4349529A4A2250C444D13" target="_blank">
+                    <a class="document-teaser-box-title" title="List of authorised foreign participants, authorised Swiss financial market infrastructures and recognised foreign financial market infrastructures " href="https://drive.google.com/file/d/11laRMhXzUQq53uz9-2hERVQhd4D8QwBg/view?usp=sharing?sc_lang=en&amp;hash=2F916F33B5B4349529A4A2250C444D13" target="_blank">
 List of authorised foreign participants, authorised Swiss financial market infrastructures and recognised foreign financial market infrastructures                     </a>
 
                         <p class="document-teaser-box-text js-document-teaser-box-text"></p>
